# meetup-2020-01-16

./: .gitignore  CMakeLists.txt  README.md  bootstrap-emscripten-conan.sh  conanfile.txt  index.html  slides.md
bootstrap/profiles/: emscripten
live_demo/: .gitattributes  emscripten_demo.js  emscripten_demo.wasm  index.js
src/: FaceDetector.cpp  main.cpp
styles/: microblink.css
web/: index.html
